<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/menu_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/menu_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/menu_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="100"
        android:title="@string/menu_LogOut"
        app:showAsAction="never" />

</menu>
