<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.CardView
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/assignedClientMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackgroundpurple"
                    android:contentDescription="@string/home1"
                    android:padding="10dp"
                    android:src="@drawable/ic_trending_up_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/home1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/NumClientA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:text=""
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:layout_margin="10dp">


                <LinearLayout
                    android:id="@+id/pendingClientMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundgreen"
                        android:contentDescription="@string/home1"
                        android:padding="10dp"
                        android:src="@drawable/ic_group_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/home2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/NumClientP"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:text=""
                        android:layout_marginLeft="8dp"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp">


                <LinearLayout
                    android:id="@+id/reportedManageMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundaccent"
                        android:contentDescription="@string/home1"
                        android:padding="10dp"
                        android:src="@drawable/ic_library_books_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/home3"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/NumClientGR"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text=""
                        android:layout_marginLeft="8dp"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>

    </LinearLayout>
